# nandatown

./: .gitignore  .railwayignore  README.md  pyproject.toml
.github/workflows/: publish.yml
apps/dashboard/: index.html
apps/nest-dashboard/: .railwayignore  next.config.ts  package-lock.json  package.json
apps/nest-dashboard/public/: hackathon-data.json
apps/nest-dashboard/src/app/: globals.css  (+2 more)
docs/hackathon/: charter.md  judging.md  scores.json
docs/hackathon/problems/: 01-comms-schema-versioning.md  02-memory-crdt-lww.md  03-payments-streaming-x402.md  06-registry-gossip-eventual-consistency.md  08-datafacts-content-addressed.md  09-privacy-hybrid-encryption-with-selective-disclosure.md  10-coordination-bft-partition-tolerant.md
docs/layers/: memory.md  mesh_revocable_auth.md  trust.md
examples/capsule-emit/: README.md  pyproject.toml
examples/capsule-emit/agent_action_capsule-stubs/: __init__.pyi  canonical.pyi
examples/capsule-emit/capsule_emit-stubs/: __init__.pyi
examples/capsule-emit/capsule_emit_nanda/: __init__.py  payments.py  trust.py
examples/capsule-emit/tests/: test_capsule_validator.py  test_smoke.py
examples/capsule-trust/: README.md
examples/stripe-capsule-payment/: README.md
scenarios/: capability_spoofing.yaml  comms_replay.yaml  delegated_auth_partition.yaml  failure_detection_forgery.yaml  gossip_registry.yaml  memory_concurrent_writers.yaml  receipt_reputation_capsule.yaml  receipt_reputation_majority_ring.yaml
scripts/: preanchor_acl_receipts.py
scripts/judge/: judge_pr.py
scripts/judge/tests/: test_judge.py
(+44 files in other folders)
